<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_privacy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.qdhhh.fakebeizhongyi.me.setting.Activity_Privacy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorDefault">

        <ImageView
            android:id="@+id/me_privacy_backicon_iv_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@drawable/tongyong_bar_icon1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/me_setting_privacy_title"
            android:textColor="@color/whitetext"
            android:textSize="25sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/me_setting_privacy_communicate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/tongyong_sousuo_kuang"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/me_setting_privacy_need_authenticate"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/me_setting_privacy_need"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:background="@drawable/select_me_setting_remind"
                android:button="@null"
                android:paddingRight="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/textColor_black_01" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text="@string/me_setting_privacy_visiable"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/me_setting_privacy_visiable"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:background="@drawable/select_me_setting_remind"
                android:button="@null"
                android:paddingRight="20dp" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/me_setting_privacy_picture" />

    <RelativeLayout
        android:id="@+id/me_setting_privacy_pic"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/tongyong_sousuo_kuang">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:text="@string/me_setting_privacy_visiable_pic"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
